--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script type="text/babel" src="app.js"></script>
+  <script type="text/babel" src="./frontend/src/App.js"></script>
 </body>
 </html>
 
